--- a/admin/app/views/spree/admin/posts/index.html.erb
+++ b/admin/app/views/spree/admin/posts/index.html.erb
@@ -8,8 +8,7 @@
 
 <div class="card-lg">
   <%= render "spree/admin/posts/filters" %>
-
-  <% if @posts.any? %>
+  <% if @collection.any? %>
     <div class="table-responsive rounded-lg">
       <table class="table">
         <thead class="text-muted">
@@ -22,15 +21,12 @@
           </tr>
         </thead>
         <tbody>
-          <%= render partial: "spree/admin/posts/post", collection: @posts, cached: spree_base_cache_scope %>
+          <%= render collection: @collection, partial: "spree/admin/posts/post", cached: spree_base_cache_scope %>
         </tbody>
       </table>
     </div>
-
-    <%= render partial: "spree/admin/shared/index_table_options", locals: { collection: @posts } %>
+    <%= render "spree/admin/shared/index_table_options", collection: @collection %>
   <% else %>
-    <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
-      <%= Spree.t(:no_resource_found, resource: Spree.t(:posts)) %>
-    </div>
+    <%= render 'spree/admin/shared/no_resource_found' %>
   <% end %>
 </div>
