--- a/admin/app/views/spree/admin/return_authorizations/_list.html.erb
+++ b/admin/app/views/spree/admin/return_authorizations/_list.html.erb
@@ -17,14 +17,5 @@
     </table>
   </div>
 <% else %>
-  <div
-    class="
-      text-muted p-5 d-flex align-items-center w-100 justify-content-center
-    "
-  >
-    <%= Spree.t(
-      :no_resource_found,
-      resource: plural_resource_name(Spree::ReturnAuthorization),
-    ) %>.
-  </div>
+  <%= render 'spree/admin/shared/no_resource_found', new_object_url: nil %>
 <% end %>
