--- a/admin/app/views/spree/admin/users/index.html.erb
+++ b/admin/app/views/spree/admin/users/index.html.erb
@@ -13,14 +13,10 @@
   <%= link_to_with_icon 'plus', Spree.t(:create_customer), spree.new_admin_user_path, class: "btn btn-primary" %>
 <% end if can? :create, Spree::user_class %>
 
-<% content_for :table_filter_title do %>
-  <%= Spree.t(:search) %>
-<% end %>
-
 <div class="card-lg">
   <%= render "spree/admin/users/filters" %>
 
-  <% if @users.any? %>
+  <% if @collection.any? %>
     <div data-controller="bulk-operation" data-action="keydown.esc->bulk-operation#cancel" tabindex="0">
       <%= form_tag spree.admin_users_path, data: { 'bulk-operation-target': 'form' } do %>
         <%= render 'spree/admin/shared/bulk_modal' %>
@@ -90,15 +86,14 @@
               </tr>
             </thead>
             <tbody>
-              <%= render collection: @users, partial: "spree/admin/users/user", cached: spree_base_cache_scope %>
+              <%= render collection: @collection, partial: "spree/admin/users/user", cached: spree_base_cache_scope %>
             </tbody>
           </table>
         </div>
       <% end %>
     </div>
+    <%= render "spree/admin/shared/index_table_options", collection: @collection if @collection.any? %>
   <% else %>
     <%= render "spree/admin/shared/no_resource_found" %>
   <% end %>
-
-  <%= render "spree/admin/shared/index_table_options", collection: @users, simple: true if @users.any? %>
 </div>
