--- a/admin/app/assets/stylesheets/spree/admin/components/_modals.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_modals.scss
@@ -25,7 +25,7 @@ body.modal-open {
 }
 .modal-footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: $modal-inner-padding;
   background-color: #FAFAFA;
   border-top: 1px solid $gray-50;
