--- a/admin/app/views/spree/admin/orders/billing_address/new.html.erb
+++ b/admin/app/views/spree/admin/orders/billing_address/new.html.erb
@@ -1,10 +1,7 @@
 <%= turbo_frame_tag :dialog_modal do %>
   <%= form_for @address, url: spree.admin_order_billing_address_path(@order), data: {controller: 'auto-submit', form_target: 'form', turbo_frame: :_top}, method: :post do |f| %>
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t(:billing_address) %></h5>
-        <button type="button" class="btn-close" data-dismiss="modal" aria-label="<%= Spree.t(:close) %>" ></button>
-      </div>
+      <%= modal_header(Spree.t(:billing_address)) %>
       <div class="modal-body d-flex flex-col gap-3" data-controller="order-billing-address">
         <div>
           <% if @order.shipping_address.present? %>
@@ -26,8 +23,8 @@
         </div>
         <%= render 'form', address: @address, f: f %>
       </div>
-      <div class="modal-footer d-flex justify-content-between">
-        <button type="button" class="btn btn-light" data-dismiss="modal"><%= Spree.t('actions.discard') %></button>
+      <div class="modal-footer">
+        <%= modal_discard_button %>
         <%= turbo_save_button_tag Spree.t('actions.save') %>
       </div>
     </div>
