--- a/admin/app/views/spree/admin/orders/customer_returns/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/edit.html.erb
@@ -110,16 +110,7 @@
         reimbursements: @customer_return.reimbursements,
       } %>
     <% else %>
-      <div
-        class="
-          text-muted p-5 d-flex align-items-center w-100 justify-content-center
-        "
-      >
-        <%= Spree.t(
-          :no_resource_found,
-          resource: plural_resource_name(Spree::Reimbursement),
-        ) %>
-      </div>
+      <%= render 'spree/admin/shared/no_resource_found', new_object_url: nil %>
     <% end %>
   </div>
 </div>
