--- a/admin/app/views/spree/admin/products/bulk_modal.html.erb
+++ b/admin/app/views/spree/admin/products/bulk_modal.html.erb
@@ -1,11 +1,6 @@
 <%= turbo_frame_tag :bulk_modal do %>
   <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">
-        <%= @title %>
-      </h5>
-      <button type="button" class="btn-close" data-dismiss="modal" aria-label="<%= Spree.t(:close) %>" />
-    </div>
+    <%= modal_header(@title) %>
     <div class="modal-body">
       <p><%= @body %></p>
 
@@ -15,8 +10,8 @@
         <%= tom_select_tag 'tags', multiple: true, class: 'w-100', options: tags_json_array, required: true, value_field: :name, create: params[:kind] == 'add_tags' %>
       <% end %>
     </div>
-    <div class="modal-footer d-flex justify-content-between">
-      <button type="button" class="btn btn-light" data-dismiss="modal"><%= Spree.t('actions.discard') %></button>
+    <div class="modal-footer">
+      <%= modal_discard_button %>
       <%= turbo_save_button_tag %>
     </div>
   </div>
