--- a/admin/app/views/spree/admin/shared/_bulk_modal.html.erb
+++ b/admin/app/views/spree/admin/shared/_bulk_modal.html.erb
@@ -2,18 +2,17 @@
   <div class="modal-dialog modal-dialog-centered">
     <%= turbo_frame_tag :bulk_modal do %>
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t(:loading) %>...</h5>
-          <button type="button" class="btn-close" data-dismiss="modal" aria-label="<%= Spree.t(:close) %>" />
-        </div>
+        <%= modal_header(Spree.t(:loading)) %>
         <div class="modal-body text-center">
           <div class="spinner-border text-muted" role="status">
             <span class="sr-only"><%= Spree.t(:loading) %>...</span>
           </div>
         </div>
-        <div class="modal-footer d-flex justify-content-between">
-          <button type="button" class="btn btn-light" data-dismiss="modal"><%= Spree.t(:close) %></button>
-          <button type="button" class="btn btn-primary" disabled="disabled"><%= Spree.t(:save_changes) %></button>
+        <div class="modal-footer">
+          <%= modal_discard_button %>
+          <button type="button" class="btn btn-primary" disabled="disabled">
+            <%= Spree.t('actions.save') %>
+          </button>
         </div>
       </div>
     <% end %>
