--- a/admin/app/assets/stylesheets/spree/admin/components/_bulk_panel.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_bulk_panel.scss
@@ -5,6 +5,9 @@
   background-color: $white;
   padding: 0.5rem;
   box-shadow: $dropdown-box-shadow;
+  animation: bounceInUp;
+  animation-duration: 0.5s;
+  gap: 0.75rem;
 }
 
 #bulk-panel {
@@ -28,4 +31,11 @@
     left: 16.66666667%;
     width: 83.33333333%;
   }
+}
+
+.bulk-operations-counter {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.25rem;
 }
