--- a/admin/app/views/spree/admin/products/_bulk_operations.html.erb
+++ b/admin/app/views/spree/admin/products/_bulk_operations.html.erb
@@ -1,35 +1,22 @@
 <div id="bulk-panel" class="d-none" data-bulk-operation-target="panel">
-  <div
-    class="
-      bulk-panel-container animate__animated animate__bounceInUp animate__faster
-    "
-  >
-    <div data-toggle="modal" data-target="#bulk-modal">
-      <% if can?(:activate, Spree::Product) %>
-        <a
-          href="<%= spree.bulk_modal_admin_products_path(kind: :set_status, status: :active) %>"
-          data-turbo-frame="bulk_modal"
-          class="btn btn-light mr-2 d-vendor"
-          data-action="click->bulk-operation#setBulkAction"
-          data-url="<%= spree.bulk_status_update_admin_products_path(status: :active) %>"
-        >
-          <%= icon("circle-check") %>
-          <%= Spree.t("admin.bulk_ops.products.title.set_status", status: :active) %>
-        </a>
-      <% end %>
-      <a
-        href="<%= spree.bulk_modal_admin_products_path(kind: :set_status, status: :draft) %>"
-        data-turbo-frame="bulk_modal"
-        class="btn btn-light mr-2"
-        data-action="click->bulk-operation#setBulkAction"
-        data-url="<%= spree.bulk_status_update_admin_products_path(status: :draft) %>"
-      >
-        <%= icon("circle-dotted") %>
-        <%= Spree.t("admin.bulk_ops.products.title.set_status", status: :draft) %>
-      </a>
-    </div>
+  <div class="bulk-panel-container">
+    <% if can?(:activate, Spree::Product) %>
+      <%= bulk_action_link(
+        Spree.t("admin.bulk_ops.products.title.set_status", status: :active),
+        spree.bulk_modal_admin_products_path(kind: :set_status, status: :active),
+        icon: "circle-check",
+        url: spree.bulk_status_update_admin_products_path(status: :active)
+      ) %>
+    <% end %>
 
-    <div class="dropdown dropup mr-3 ml-1" role="group">
+    <%= bulk_action_link(
+      Spree.t("admin.bulk_ops.products.title.set_status", status: :draft),
+      spree.bulk_modal_admin_products_path(kind: :set_status, status: :draft),
+      icon: "circle-dotted",
+      url: spree.bulk_status_update_admin_products_path(status: :draft)
+    ) %>
+
+    <div class="dropdown dropup" role="group">
       <button
         type="button"
         data-display="static"
@@ -43,80 +30,58 @@
       <div
         class="dropdown-menu dropdown-menu-left"
         aria-labelledby="btnGroupDrop1"
-        data-toggle="modal"
-        data-target="#bulk-modal"
       >
-        <a
-          href="<%= spree.bulk_modal_admin_products_path(kind: :set_status, status: :archived) %>"
-          data-turbo-frame="bulk_modal"
-          class="dropdown-item"
-          data-action="click->bulk-operation#setBulkAction"
-          data-url="<%= spree.bulk_status_update_admin_products_path(status: :archived) %>"
-        >
-          <%= icon("archive") %>
-          <%= Spree.t("admin.bulk_ops.products.title.set_status", status: :archived) %>
-        </a>
+        <%= bulk_action_link(
+          Spree.t("admin.bulk_ops.products.title.set_status", status: :archived),
+          spree.bulk_modal_admin_products_path(kind: :set_status, status: :archived),
+          icon: "archive",
+          url: spree.bulk_status_update_admin_products_path(status: :archived),
+          class: "dropdown-item"
+        ) %>
+
         <% if can?(:manage, Spree::Classification) %>
           <div class="dropdown-divider"></div>
-          <a
-            href="<%= spree.bulk_modal_admin_products_path(kind: :add_to_taxons) %>"
-            data-turbo-frame="bulk_modal"
-            class="dropdown-item"
-            data-action="click->bulk-operation#setBulkAction"
-            data-url="<%= spree.bulk_add_to_taxons_admin_products_path %>"
-          >
-            <%= icon("category-plus") %>
-            <%= Spree.t("admin.bulk_ops.products.title.add_to_taxons") %>
-          </a>
-          <a
-            href="<%= spree.bulk_modal_admin_products_path(kind: :remove_from_taxons) %>"
-            data-turbo-frame="bulk_modal"
-            class="dropdown-item"
-            data-action="click->bulk-operation#setBulkAction"
-            data-url="<%= spree.bulk_remove_from_taxons_admin_products_path %>"
-          >
-            <%= icon("category-minus") %>
-            <%= Spree.t("admin.bulk_ops.products.title.remove_from_taxons") %>
-          </a>
+
+          <%= bulk_action_link(
+            Spree.t("admin.bulk_ops.products.title.add_to_taxons"),
+            spree.bulk_modal_admin_products_path(kind: :add_to_taxons),
+            icon: "category-plus",
+            url: spree.bulk_add_to_taxons_admin_products_path,
+            class: "dropdown-item"
+          ) %>
+
+          <%= bulk_action_link(
+            Spree.t("admin.bulk_ops.products.title.remove_from_taxons"),
+            spree.bulk_modal_admin_products_path(kind: :remove_from_taxons),
+            icon: "category-minus",
+            url: spree.bulk_remove_from_taxons_admin_products_path,
+            class: "dropdown-item"
+          ) %>
         <% end %>
 
         <% if can?(:manage_tags, Spree::Product) %>
           <div class="dropdown-divider"></div>
-          <a
-            href="<%= spree.bulk_modal_admin_products_path(kind: :add_tags) %>"
-            data-turbo-frame="bulk_modal"
-            class="dropdown-item"
-            data-action="click->bulk-operation#setBulkAction"
-            data-url="<%= spree.bulk_add_tags_admin_products_path %>"
-          >
-            <%= icon("tag-plus") %>
-            <%= Spree.t("admin.bulk_ops.products.title.add_tags") %>
-          </a>
-          <a
-            href="<%= spree.bulk_modal_admin_products_path(kind: :remove_tags) %>"
-            data-turbo-frame="bulk_modal"
-            class="dropdown-item"
-            data-action="click->bulk-operation#setBulkAction"
-            data-url="<%= spree.bulk_remove_tags_admin_products_path %>"
-          >
-            <%= icon("tag-minus") %>
-            <%= Spree.t("admin.bulk_ops.products.title.remove_tags") %>
-          </a>
+
+          <%= bulk_action_link(
+            Spree.t("admin.bulk_ops.products.title.add_tags"),
+            spree.bulk_modal_admin_products_path(kind: :add_tags),
+            icon: "tag-plus",
+            url: spree.bulk_add_tags_admin_products_path,
+            class: "dropdown-item"
+          ) %>
+
+          <%= bulk_action_link(
+            Spree.t("admin.bulk_ops.products.title.remove_tags"),
+            spree.bulk_modal_admin_products_path(kind: :remove_tags),
+            icon: "tag-minus",
+            url: spree.bulk_remove_tags_admin_products_path,
+            class: "dropdown-item"
+          ) %>
         <% end %>
       </div>
     </div>
 
-    <span>
-      <strong data-bulk-operation-target="counter"></strong>
-      <%= Spree.t("admin.products.selected") %>
-    </span>
-
-    <button
-      type="button"
-      class="btn-close ml-2"
-      data-dismiss="modal"
-      aria-label="<%= Spree.t(:close) %>"
-      data-action="bulk-operation#cancel"
-    />
+    <%= bulk_operations_counter %>
+    <%= bulk_operations_close_button %>
   </div>
 </div>
