--- a/admin/app/views/spree/admin/integrations/_integration.html.erb
+++ b/admin/app/views/spree/admin/integrations/_integration.html.erb
@@ -3,7 +3,7 @@
 
 <% integration_description ||= Spree.t("admin.integrations.#{integration_name.downcase}.description") %>
 
-<div class="col mb-4 d-flex align-items-stretch">
+<div id="integration-<%= integration_name.downcase %>" class="col mb-4 d-flex align-items-stretch">
   <div class="card">
     <div class="card-header border-bottom d-flex align-items-center justify-content-between h-auto pr-3 <% if integration.present? %>bg-success<% end %>">
       <%= image_tag integration_class.icon_path, alt: integration_name, height: 36 %>
