Fix the code injection issue for the integrations controller

--- a/admin/app/views/spree/admin/integrations/new.html.erb
+++ b/admin/app/views/spree/admin/integrations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_title do %>
   <%= page_header_back_button spree.admin_integrations_path %>
-  <%= Spree.t(:connect) %> <%= @integration.name %>
+  <%= Spree.t('actions.connect') %> <%= @integration.name %>
 <% end %>
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @integration } %>
