--- a/admin/app/views/spree/admin/orders/_list.html.erb
+++ b/admin/app/views/spree/admin/orders/_list.html.erb
@@ -23,6 +23,6 @@
     </table>
   </div>
 <% else %>
-  <%= render 'spree/admin/shared/no_resource_found', new_object_url: nil %>
+  <%= render 'spree/admin/shared/no_resource_found', new_object_url: nil, model_class: Spree::Order %>
 <% end %>
 <%= render 'spree/admin/shared/index_table_options', collection: @orders if @orders.any? %>
