--- a/admin/app/views/spree/admin/stores/new.html.erb
+++ b/admin/app/views/spree/admin/stores/new.html.erb
@@ -25,7 +25,7 @@
                   </div>
 
                   <div class="form-group">
-                    <%= f.label :default_locale, Spree.t(:locale) %>
+                    <%= f.label :default_locale %>
                     <%= f.select :default_locale, options_from_collection_for_select(all_locales_options, :last, :first, current_store.default_locale || I18n.locale), { }, { data: { controller: 'autocomplete-select', enable_button_target: 'input', action: 'store-form#updateCurrency' } } %>
                   </div>
 
