--- a/admin/app/views/spree/admin/integrations/_form.html.erb
+++ b/admin/app/views/spree/admin/integrations/_form.html.erb
@@ -1,20 +1,22 @@
 <% if @integration.form_partial_name.present? %>
   <%= render "spree/admin/integrations/forms/#{@integration.form_partial_name}", form: form %>
 <% else %>
-  <% integration_key = @integration.name.underscore %>
-
   <div class="col-12 col-md-6 p-0">
     <div class="card mb-4">
       <div class="card-body">
+        <% if @integration.form_guide_partial_name.present? %>
+          <%= render "spree/admin/integrations/form_guides/#{@integration.form_guide_partial_name}", form: form %>
+        <% end %>
+
         <% @integration.preferences.keys.each do |key| %>
-          <%= preference_field(@integration, form, key, i18n_scope: "admin.integrations.#{integration_key}") %>
+          <%= preference_field(@integration, form, key, i18n_scope: "admin.integrations.#{@integration.key}") %>
 
           <% if @integration.field_help_text_partials.map(&:to_s).include?(key.to_s) %>
-            <%= render "spree/admin/integrations/field_help_texts/#{integration_key}/#{key}", form: form %>
+            <%= render "spree/admin/integrations/field_help_texts/#{@integration.key}/#{key}", form: form %>
           <% end %>
 
           <% if @integration.field_guide_partials.map(&:to_s).include?(key.to_s) %>
-            <%= render "spree/admin/integrations/field_guides/#{integration_key}/#{key}", form: form %>
+            <%= render "spree/admin/integrations/field_guides/#{@integration.key}/#{key}", form: form %>
           <% end %>
         <% end %>
       </div>
