--- a/admin/app/views/spree/admin/integrations/_integration.html.erb
+++ b/admin/app/views/spree/admin/integrations/_integration.html.erb
@@ -1,12 +1,14 @@
 <% integration_name = integration_class.integration_name %>
-<% integration = store_integration(integration_name.downcase) %>
+<% integration = store_integration(integration_class.integration_key) %>
 
-<% integration_description ||= Spree.t("admin.integrations.#{integration_name.downcase}.description") %>
+<% integration_description ||= Spree.t("admin.integrations.#{integration_class.integration_key}.description") %>
 
-<div id="integration-<%= integration_name.downcase %>" class="col mb-4 d-flex align-items-stretch">
-  <div class="card">
+<div id="integration-<%= integration_class.integration_key %>" class="col mb-4 d-flex align-items-stretch">
+  <div class="card w-full">
     <div class="card-header border-bottom d-flex align-items-center justify-content-between h-auto pr-3 <% if integration.present? %>bg-success<% end %>">
-      <%= image_tag integration_class.icon_path, alt: integration_name, height: 36 if integration_class.icon_path.present? %>
+      <div style="height: 36px" class="d-flex align-items-center">
+        <%= image_tag integration_class.icon_path, alt: integration_name, **integration_class.icon_sizing_options if integration_class.icon_path.present? %>
+      </div>
 
       <% if integration.present? %>
         <span class="badge badge-success small">
