Do not render some sidebar items when there is no `current_store`

--- a/admin/app/views/spree/admin/shared/_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_header.html.erb
@@ -19,7 +19,7 @@
 
     <%= link_to spree.admin_dashboard_path, class: 'navbar-brand d-flex d-lg-none h-100 align-items-center mx-0 text-white' do %>
       <%= current_store.name %>
-    <% end %>
+    <% end if defined?(current_store) && current_store %>
 
     <div class="text-right d-flex justify-content-end p-0" id="header-user-account" data-turbo-permanent>
       <%= render 'spree/admin/shared/user_dropdown' %>
