--- a/admin/app/views/spree/admin/integrations/edit.html.erb
+++ b/admin/app/views/spree/admin/integrations/edit.html.erb
@@ -6,6 +6,6 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @integration } %>
 
 <%= form_for @integration, as: :integration, url: spree.admin_integration_path(@integration) do |form| %>
-  <%= render 'spree/admin/integrations/form', form: form %>
+  <%= render "spree/admin/integrations/forms/#{@integration.key}", form: form %>
   <%= render 'spree/admin/integrations/form_actions', integration: @integration %>
 <% end %>
