--- a/admin/app/views/spree/admin/integrations/new.html.erb
+++ b/admin/app/views/spree/admin/integrations/new.html.erb
@@ -9,6 +9,6 @@
   <%= form.hidden_field :type %>
   <%= form.hidden_field :active, value: true %>
 
-  <%= render 'spree/admin/integrations/form', form: form %>
+  <%= render "spree/admin/integrations/forms/#{@integration.key}", form: form %>
   <%= render 'spree/admin/integrations/form_actions', integration: @integration %>
 <% end %>
