--- a/admin/app/views/spree/admin/integrations/edit.html.erb
+++ b/admin/app/views/spree/admin/integrations/edit.html.erb
@@ -7,5 +7,5 @@
 
 <%= form_for @integration, as: :integration, url: spree.admin_integration_path(@integration) do |form| %>
   <%= render "spree/admin/integrations/forms/#{@integration.key}", form: form %>
-  <%= render 'spree/admin/integrations/form_actions', integration: @integration %>
+  <%= render 'spree/admin/shared/edit_resource_links', f: form %>
 <% end %>
