--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -67,7 +67,7 @@
 
 <% if content_for?(:page_tabs) %>
   <div class="container">
-    <ul class="nav nav-pills flex-nowrap overflow-auto w-100 mb-3">
+    <ul class="nav nav-pills flex-nowrap w-100 mb-3">
       <%= yield :page_tabs %>
     </ul>
   </div>
